--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"react-dom": "^18.2.0"
 	},
 	"devDependencies": {
+		"@rollup/plugin-terser": "^0.2.1",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^14.4.3",
