--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"jsdom": "^20.0.3",
 		"prettier": "^2.7.1",
 		"rollup": "^3.9.0",
+		"rollup-plugin-delete": "^2.0.0",
 		"rollup-plugin-ts": "^3.0.2",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.6.4",
