--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build:
-    if: github.repository == 'octo-org/octo-repo-prod'
+    if: contains(github.event.head_commit.message, 'update npm')
     name: Build
     runs-on: ubuntu-latest
     steps:
