--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"copyRequiredsLinux": "cp './packageExclusive.json' './build/package.json' && cp './README.md' './build'",
 		"test": "vitest run --coverage",
 		"vitest": "vitest --coverage --ui --api.port=56789",
-		"build:vite": "tsc && vite build"
+		"build:vite": "tsc && vite build",
+    "sonar": "npx sonar-scanner -D sonar.login=sqp_"
 	},
 	"dependencies": {
 		"react": "^18.2.0",
@@ -40,6 +41,7 @@
 		"rollup": "^3.9.0",
 		"rollup-plugin-delete": "^2.0.0",
 		"rollup-plugin-ts": "^3.0.2",
+		"sonarqube-scanner": "^3.0.0",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.6.4",
 		"vite": "^3.0.0",
