--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,3 +11,7 @@ sonar.cpd.exclusions=test/**/*
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
 sonar.test.inclusions=**/*.test.*
+
+sonar.issue.ignore.multicriteria=e1
+sonar.issue.ignore.multicriteria.e1.ruleKey=typescript:S6480
+sonar.issue.ignore.multicriteria.e1.resourceKey=**.tsx
